# rag-support-client

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.external-ollama.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  setup.py  streamlit_app.py
.streamlit/: config.toml
deploy/: cleanup.sh  deploy.sh
deploy/config/: install_config.sh
deploy/config/nginx/: rag-support-ssl.conf.template  security.conf
deploy/config/systemd/: rag-api.service.template  rag-ui.service.template
deploy/scripts/: install.sh  install_local.sh  install_remote.sh  setup_ssl.sh
deploy/tests/: test_deployment.sh
docs/technical/: Development_Quick_Sart_Guide.md
docs/user/: User_Quick_Start_Guide.md
logs/: app.log.2024-12-14  app.log.2024-12-15
scripts/: dev-reinit-all.sh  dev-soft-reset.sh  docker-manage.sh
src/rag_support_client/api/: __init__.py  dependencies.py
src/rag_support_client/api/models/: __init__.py  schemas.py
src/rag_support_client/api/routers/: __init__.py  admin.py  chat.py
src/rag_support_client/config/: __init__.py  config.py
src/rag_support_client/rag/: __init__.py  document_loader.py  scoring.py
src/rag_support_client/rag/embeddings/: __init__.py  ollama.py
src/rag_support_client/rag/llm/: __init__.py  ollama.py
src/rag_support_client/rag/processors/: __init__.py  loader.py  markdown_processor.py
src/rag_support_client/rag/vectorstore/: __initi__.py  base.py
src/rag_support_client/streamlit/: __init__.py  types.py
src/rag_support_client/streamlit-stubs/: __init__.pyi
src/rag_support_client/streamlit/components/: __init__.py  base.py
src/rag_support_client/streamlit/pages/: 1_🏠_Home.py  3_⚙️_Admin.py
src/rag_support_client/utils/: __init__.py  conversation.py  logger.py  metrics.py  monitoring.py  security.py  state.py  vacuum_db.py
tests/: conftest.py  pytest.ini  test_config.py
tests/performance/: test_response_times.py
tests/rag_llm/: test_rag_pipeline.py
